--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,3 +7,13 @@
     background: #ce453a;
     color: #fff;
 }
+
+.m9 {
+    margin-top: 40px;
+    margin-bottom: 60px;
+}
+
+.m10 {
+    margin-top: 60px;
+    margin-bottom: 100px;
+}
